# thebenjicat

./: .gitignore  Cargo.toml  README.md
src/: admin.rs  admin_password.txt  database.rs  files.rs  index.html  main.rs  pages.rs
src/pages/: admin.html  enter_password.html  file_not_found.html  files.html  index.html  links.html  sitemap.html
src/pages/partials/: header.html  html_head.html
src/pages/projects/: ant_logic.html  aoc23.html  ball_blitz.html  interactive_em.html  matrix_assistant.html  pyha_analyzer.html  topographic_sand_map.html  xprtcalc.html
src/static/style/: main.css  project.css
