[package]
name = "thebenjicat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
env_logger = "0.10.1"
handlebars = { version = "5.0.0", features = ["dir_source"] }
lazy_static = "1.4.0"
rusqlite = {version = "0.29.0", features = ["bundled"]}
serde = { version = "1.0.192", features = ["derive"] }
